cmake_minimum_required(VERSION 3.0)


add_executable(arrayD "arrayD.cpp")
add_executable(stackA "stackA.cpp")
add_executable(stackL "stackL.cpp")
add_executable(list "list.cpp")
add_executable(queueA "queueA.cpp")
add_executable(queueL "queueL.cpp")
add_executable(queuePA "queuePA.cpp")
add_executable(queuePL "queuePL.cpp")
add_executable(matrixVs "matrixVs.cpp")
add_executable(matrixDs "matrixDs.cpp")
add_executable(matrixLs "matrixLs.cpp")
